<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FreeMode" android:id="@+id/coordinatorLayout">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/set1team2"
                android:layout_width="79dp"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="@string/set1"
                android:inputType="textPersonName"
                app:layout_constraintTop_toTopOf="@+id/set1team1"
                app:layout_constraintStart_toEndOf="@+id/set1team1" android:layout_marginStart="64dp"/>
        <EditText
                android:id="@+id/set3team2"
                android:layout_width="79dp"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="@string/set3"
                android:inputType="textPersonName"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/set2team2"
                app:layout_constraintStart_toStartOf="@+id/set2team2"/>
        <EditText
                android:id="@+id/set2team1"
                android:layout_width="79dp"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="@string/set2"
                android:inputType="textPersonName"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/set1team1"
                app:layout_constraintStart_toStartOf="@+id/set1team1"/>
        <EditText
                android:id="@+id/set3team1"
                android:layout_width="79dp"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="@string/set3"
                android:inputType="textPersonName"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/set2team1"
                app:layout_constraintStart_toStartOf="@+id/set2team1"/>
        <EditText
                android:id="@+id/set2team2"
                android:layout_width="79dp"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="@string/set2"
                android:inputType="textPersonName"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/set1team2"
                app:layout_constraintStart_toStartOf="@+id/set1team2"/>
        <EditText
                android:id="@+id/set1team1"
                android:layout_width="79dp"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="@string/set1"
                android:inputType="textPersonName"
                android:layout_marginTop="56dp"
                app:layout_constraintTop_toBottomOf="@+id/player2box" android:layout_marginStart="52dp"
                app:layout_constraintStart_toStartOf="@+id/player2box"/>
        <TextView
                android:text="@string/vs"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/textView32" android:textSize="18sp"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/textView20" android:layout_marginStart="152dp"
                app:layout_constraintStart_toStartOf="@+id/textView20"/>
        <TextView
                android:layout_width="139dp"
                android:layout_height="28dp"
                android:id="@+id/player3box" android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textView20"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView20"
        />
        <TextView
                android:layout_width="132dp"
                android:layout_height="25dp"
                android:id="@+id/player1box" android:textSize="18sp"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView20"
                app:layout_constraintStart_toStartOf="@+id/textView20"/>
        <TextView
                android:text="@string/matchupTitle"
                android:layout_width="338dp"
                android:layout_height="31dp" android:id="@+id/textView20"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
                android:layout_marginTop="52dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"/>
        <Button
                android:text="@string/finished"
                android:layout_width="190dp"
                android:layout_height="48dp"
                android:id="@+id/finishedButton"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="108dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <Button
                android:text="@string/skip"
                android:layout_width="189dp"
                android:layout_height="48dp"
                android:id="@+id/skipButton"
                app:layout_constraintBottom_toTopOf="@+id/finishedButton"
                app:layout_constraintStart_toStartOf="@+id/finishedButton"/>
        <Button
                android:text="@string/manualMatchup"
                android:layout_width="189dp"
                android:layout_height="56dp"
                android:id="@+id/setupNextMatchupButton"
                app:layout_constraintBottom_toTopOf="@+id/skipButton"
                app:layout_constraintStart_toStartOf="@+id/skipButton"/>
        <TextView
                android:layout_width="131dp"
                android:layout_height="29dp"
                android:id="@+id/player2box" android:textSize="18sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/player1box"
                app:layout_constraintStart_toStartOf="@+id/player1box"/>
        <TextView
                android:layout_width="139dp"
                android:layout_height="28dp"
                android:id="@+id/player4box" android:textSize="18sp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/player3box"
                app:layout_constraintEnd_toEndOf="@+id/player3box"/>
        <Switch
                android:text="BO3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bo3switch"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/finishedButton"
                app:layout_constraintEnd_toStartOf="@+id/finishedButton" android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>